--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <h1>
-            Cactus Cafe
-        </h1>
+        <a href="index.html">
+            <h1 id="logo">Cactus Cafe</h1>
+        </a>
         <nav>
             <ul id="menu">
                 <li>
