--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <a href="#">Cafe Menu</a>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
     </header>
     <section>
-
+        <div id="hero-image"></div>
     </section>
     <section>
         
