--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div id="hero-image"></div>
+    <section id="homepage-outer">
+        <div id="homepage-image"></div>
     </section>
     <section>
         
