Add menu main structure

--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
     </header>
     <section id="homepage-outer">
         <div id="homepage-image"></div>
+        <div id="cover-text">
+        <h2>The only cafe for Cacti & Coffee</h2>
+        </div>
     </section>
-    <section>
-        
+    <section id="cafe-menu">
+        <h1>Cafe Menu</h1>
+            <div id="hot-menu">Hot</div>
+            <div id="cold-menu">Cold</div>
+            <div id="image-menu">middle</div>
     </section>
     <section>
         
