--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Catus Plants</a>
+                    <a href="#">Contact Us</a>
                 </li>
                 <li>
                     <a href="#">Cafe Menu</a>
@@ -34,17 +34,64 @@
     <section id="homepage-outer">
         <div id="homepage-image"></div>
         <div id="cover-text">
-        <h2>The only cafe for Cacti & Coffee</h2>
+            <h2>The only cafe for Cacti & Coffee</h2>
+            <div>
+                <p>If you have a love for Cool Cacti and Concious Coffee then drop in and grab
+                    yourself a sustainably sourced, single origin coffee and a Cacti!</p>
+            </div>
         </div>
     </section>
     <section id="cafe-menu">
-        <h1>Cafe Menu</h1>
-            <div id="hot-menu">Hot</div>
-            <div id="cold-menu">Cold</div>
-            <div id="image-menu">middle</div>
+        <h2 id="drinksmenu">Cafe Menu</h2>
+        <div id="hot-menu">
+            <div class="hot-menu-heading">
+                <h2>Single Origin Coffee</h2>
+                <br/>
+                <ul>
+                    <li>
+                        Columbian
+                        <p>Rich in flavour, extremely aromatic and has a mild flavor with a citrusy.</p>
+                    </li>
+                    <br/>
+                    <li>
+                        Guatemala
+                        <p>Robust and distinctive flavour, grown at an altitude of over 5,000 feet.</p>
+                    </li>
+                    <br/> 
+                    <li>
+                        Kenyan
+                        <p>Intense flavour, delightful aroma, high acidity, and rich body.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="cold-menu">
+            <div class="cold-menu-heading">
+                <h2>Organic Cold pressed Juice</h2>
+                <br/>
+                <ul>
+                    <li>
+                        Daily-Detox
+                        <p>A detoxifying blend of Apple, Ginger & Lemon</p>
+                    </li>
+                    <br/>
+                    <li>
+                        Anti-Inflammantory
+                        <p>A Superfood blend of Beetroot & Orange</p>
+                    </li>
+                    <br/>
+                    <li>
+                        Clean-cleanse
+                        <p>A cleansing blend of Carrot & Cococunt</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="drinks-image"></div>
+        </div>
     </section>
     <section>
-        
+
     </section>
 </body>
 
