--- a/index.html
+++ b/index.html
@@ -87,8 +87,29 @@
                 </ul>
             </div>
         </div>
-        <div id="drinks-image"></div>
-        </div>
+        <div id="Cacti-menu">
+            <div class="cati-menu-heading">
+                <h2>Cacti Plants</h2>
+                <br/>
+                <ul>
+                    <li>
+                        San Pedro
+                        <p>Fast-growing columnar cactus native to
+                            the Andes Mountains.</p>
+                    </li>
+                    <br/>
+                    <li>
+                        Golden Barrell
+                        <p>Barrel cactus which is endemic to east-central Mexico.
+                        </p>
+                    </li>
+                    <br/>
+                    <li>
+                        Peyote
+                        <p>Small, spineless cactus primarily found in Mexico.</p>
+                    </li>
+                </ul>
+            </div>
     </section>
     <section>
 
