Add footer and social links, add opening times

--- a/index.html
+++ b/index.html
@@ -41,23 +41,24 @@
             </div>
         </div>
     </section>
+
     <section id="cafe-menu">
         <h2 id="drinksmenu">Cafe Menu</h2>
         <div id="hot-menu">
             <div class="hot-menu-heading">
                 <h2>Single Origin Coffee</h2>
-                <br/>
+                <br />
                 <ul>
                     <li>
                         Columbian
                         <p>Rich in flavour, extremely aromatic and has a mild flavor with a citrusy.</p>
                     </li>
-                    <br/>
+                    <br />
                     <li>
                         Guatemala
                         <p>Robust and distinctive flavour, grown at an altitude of over 5,000 feet.</p>
                     </li>
-                    <br/> 
+                    <br />
                     <li>
                         Kenyan
                         <p>Intense flavour, delightful aroma, high acidity, and rich body.</p>
@@ -68,18 +69,18 @@
         <div id="cold-menu">
             <div class="cold-menu-heading">
                 <h2>Organic Cold pressed Juice</h2>
-                <br/>
+                <br />
                 <ul>
                     <li>
                         Daily-Detox
                         <p>A detoxifying blend of Apple, Ginger & Lemon</p>
                     </li>
-                    <br/>
+                    <br />
                     <li>
                         Anti-Inflammantory
                         <p>A Superfood blend of Beetroot & Orange</p>
                     </li>
-                    <br/>
+                    <br />
                     <li>
                         Clean-cleanse
                         <p>A cleansing blend of Carrot & Cococunt</p>
@@ -90,30 +91,70 @@
         <div id="Cacti-menu">
             <div class="cati-menu-heading">
                 <h2>Cacti Plants</h2>
-                <br/>
+                <br />
                 <ul>
                     <li>
                         San Pedro
-                        <p>Fast-growing columnar cactus native to
+                        <p>
+                            Fast-growing columnar cactus native to
                             the Andes Mountains.</p>
                     </li>
-                    <br/>
+                    <br />
                     <li>
                         Golden Barrell
-                        <p>Barrel cactus which is endemic to east-central Mexico.
+                        <p>
+                            Barrel cactus which is endemic to east-central Mexico.
                         </p>
                     </li>
-                    <br/>
+                    <br />
                     <li>
                         Peyote
-                        <p>Small, spineless cactus primarily found in Mexico.</p>
+                        <p>
+                            Small, spineless cactus primarily found in Mexico.
+                        </p>
                     </li>
                 </ul>
             </div>
     </section>
     <section>
+        <span>
 
+        </span>
     </section>
+    <section>
+        <div>
+            <h2>
+                Opening times
+            </h2>
+            <ul>
+                <li>
+                    <h3>Monday-Friday</h3>
+                    9-5
+                </li>
+                <li>
+                    <h3>Weekends & Bank Holidays</h3>
+                    10-6
+                </li>
+            </ul>
+        </div>
+    </section>
+    <br>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+        </ul>
+    </footer>
+
+    <!-- Font Awesome script -->
+    <script src="https://kit.fontawesome.com/03d6717aa8.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
