add footer style

--- a/index.html
+++ b/index.html
@@ -122,25 +122,25 @@
         </span>
     </section>
     <section>
-        <div>
+        <div id="opening-times">
             <h2>
                 Opening times
             </h2>
             <ul>
                 <li>
                     <h3>Monday-Friday</h3>
-                    9-5
+                    9am - 5pm
                 </li>
                 <li>
                     <h3>Weekends & Bank Holidays</h3>
-                    10-6
+                    10am - 6pm
                 </li>
             </ul>
         </div>
     </section>
     <br>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
@@ -151,6 +151,7 @@
                 <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
             </li>
         </ul>
+        <h3>© 2022 Cacti Cafe</h3>
     </footer>
 
     <!-- Font Awesome script -->
