add opening times style and coffee image

--- a/index.html
+++ b/index.html
@@ -83,21 +83,26 @@
                     <br />
                     <li>
                         Clean-cleanse
-                        <p>A cleansing blend of Carrot & Cococunt</p>
+                        <p>
+                            A cleansing blend of Carrot & Cococunt
+                        </p>
                     </li>
                 </ul>
             </div>
         </div>
         <div id="Cacti-menu">
             <div class="cati-menu-heading">
-                <h2>Cacti Plants</h2>
+                <h2>
+                    Cacti Plants
+                </h2>
                 <br />
                 <ul>
                     <li>
                         San Pedro
                         <p>
                             Fast-growing columnar cactus native to
-                            the Andes Mountains.</p>
+                            the Andes Mountains.
+                        </p>
                     </li>
                     <br />
                     <li>
@@ -123,17 +128,24 @@
     </section>
     <section>
         <div id="opening-times">
+            <img src="assets/images/Coffee image.jpg" alt="Picture of Coffee fields" class="coffee-image">
             <h2>
                 Opening times
             </h2>
             <ul>
                 <li>
-                    <h3>Monday-Friday</h3>
-                    9am - 5pm
+                    <h3>
+                        Monday-Friday
+                    </h3>
+                        <h4>
+                            9am - 5pm
+                        </h4>
                 </li>
                 <li>
-                    <h3>Weekends & Bank Holidays</h3>
-                    10am - 6pm
+                    <h3>
+                        Weekends & Bank Holidays
+                    </h3>
+                        <h4>10am - 6pm</h4>
                 </li>
             </ul>
         </div>
