add signup form and images and style

--- a/index.html
+++ b/index.html
@@ -122,12 +122,8 @@
             </div>
     </section>
     <section>
-        <span>
-
-        </span>
-    </section>
-    <section>
         <div id="opening-times">
+            <img src="assets/images/juice image.jpg" alt="Picture of Juice bottles" class="juice-image">
             <img src="assets/images/Coffee image.jpg" alt="Picture of Coffee fields" class="coffee-image">
             <h2>
                 Opening times
@@ -135,32 +131,65 @@
             <ul>
                 <li>
                     <h3>
-                        Monday-Friday
+                        Monday: 9am - 5pm
                     </h3>
-                        <h4>
-                            9am - 5pm
-                        </h4>
                 </li>
                 <li>
                     <h3>
-                        Weekends & Bank Holidays
+                        Tuesday: 9am - 5pm
                     </h3>
-                        <h4>10am - 6pm</h4>
+                </li>
+                <li>
+                    <h3>
+                        Wednesday: Closed
+                    </h3>
+                </li>
+                <li>
+                    <h3>
+                        Thursday: 9am - 5pm
+                    </h3>
+                </li>
+                <li>
+                    <h3>
+                        Friday: 9am - 5pm
+                    </h3>
+                </li>
+                <li>
+                    <h3>
+                        Saturday: 10am - 6pm
+                    </h3>
                 </li>
             </ul>
+            <br>
+            <h2 class="join">
+                Join Cacti Coffee Club
+            </h2>
+            <h3>
+                If you would like to join our 'Cacti Coffee Club' and become on of the first to recieve exclusive offers
+                and discounts then please sign up below by entering your email address.
+            </h3>
+            <form action="https://formdump.8000-leeaustinbro-cactuscafe-m56nnphkwri.ws-eu78.gitpod.io/" method="post"
+                class="signup">
+                <label for="email">Email address</label>
+                <input type="email">
+                <input type="submit">
+            </form>
         </div>
     </section>
     <br>
     <footer>
         <ul class="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
             </li>
         </ul>
         <h3>© 2022 Cacti Cafe</h3>
