--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
                     <a href="#">Cafe Menu</a>
                 </li>
                 <li>
@@ -31,14 +34,28 @@
             </ul>
         </nav>
     </header>
+
     <section id="homepage-outer">
         <div id="homepage-image"></div>
-        <div id="cover-text">
+    </section>
+
+    <br>
+
+    <section>
+        <div id="about">
+            <img src="assets/images/Cati image 2.jpg" alt="Picture of cactus plants" id="cacti-image-2">
             <h2>The only cafe for Cacti & Coffee</h2>
-            <div>
-                <p>If you have a love for Cool Cacti and Concious Coffee then drop in and grab
-                    yourself a sustainably sourced, single origin coffee and a Cacti!</p>
-            </div>
+            <p>
+                Do you have a love for Cool Cacti and Concious Coffee? If so then drop in and grab
+                yourself a sustainably sourced, single origin coffee and a cool Cacti plant!
+            </p>
+            <br>
+            <p>
+                Here at 'Cactus Cafe' we pride ourselves on growing the finest Cacti plants for sale alongside providing
+                a calm and collected space to relax. Our Single Origin Coffee harvested from various premium locations
+                around the world is sure to impress and our freshly made, cold pressed Juice's are sure to give you that
+                vitamin boost.  So feel free to drop in and check us out.
+            </p>
         </div>
     </section>
 
