--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Contact Us</a>
+                    <a href="#opening-times">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#">Cafe Menu</a>
+                    <a href="#cafe-menu">Cafe Menu</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -143,7 +143,7 @@
             <img src="assets/images/juice image.jpg" alt="Picture of Juice bottles" class="juice-image">
             <img src="assets/images/Coffee image.jpg" alt="Picture of Coffee fields" class="coffee-image">
             <h2>
-                Opening times
+                Opening Times
             </h2>
             <ul>
                 <li>
