center cacti menu h2

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div id="Cacti-menu">
             <div class="cati-menu-heading">
-                <h2>
+                <h2 class="cacti-heading">
                     Cacti Plants
                 </h2>
                 <br />
