Add media quiries for mobile screens

--- a/index.html
+++ b/index.html
@@ -90,12 +90,16 @@
                 <ul>
                     <li>
                         Daily-Detox
-                        <p>A detoxifying blend of Apple, Ginger & Lemon</p>
+                        <p>
+                            A detoxifying blend of Apple, Ginger & Lemon
+                        </p>
                     </li>
                     <br />
                     <li>
                         Anti-Inflammantory
-                        <p>A Superfood blend of Beetroot & Orange</p>
+                        <p>
+                            A Superfood blend of Beetroot & Orange
+                        </p>
                     </li>
                     <br />
                     <li>
@@ -108,7 +112,7 @@
             </div>
         </div>
         <div id="Cacti-menu">
-            <div class="cati-menu-heading">
+            <div class="cacti-menu-heading">
                 <h2 class="cacti-heading">
                     Cacti Plants
                 </h2>
@@ -137,6 +141,7 @@
                     </li>
                 </ul>
             </div>
+        </div>    
     </section>
     <section>
         <div id="opening-times">
