remove homepage image 'section' replace with Div

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         </nav>
     </header>
 
-    <section id="homepage-outer">
-        <div id="homepage-image"></div>
-    </section>
+         <div id="homepage-outer", class="homepage-image"></div>
 
     <br>
 
