--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section>
         <div id="about">
-            <img src="assets/images/Cati image 2.jpg" alt="Picture of cactus plants" id="cacti-image-2">
+            <img src="assets/images/cactiimage2.jpg" alt="Picture-of-cactus-plants" id="cacti-image-2">
             <h2>The only cafe for Cacti & Coffee</h2>
             <p>
                 Do you have a love for Cool Cacti and Concious Coffee? If so then drop in and grab
@@ -62,20 +62,24 @@
         <div id="hot-menu">
             <div class="hot-menu-heading">
                 <h2>Single Origin Coffee</h2>
-                <br />
+                <br>
                 <ul>
                     <li>
+                    <h3>
                         Columbian
+                    </h3>
                         <p>Rich in flavour, extremely aromatic and has a mild flavor with a citrusy.</p>
                     </li>
-                    <br />
                     <li>
+                    <h3>
                         Guatemala
+                    </h3>
                         <p>Robust and distinctive flavour, grown at an altitude of over 5,000 feet.</p>
                     </li>
-                    <br />
                     <li>
+                    <h3>
                         Kenyan
+                    </h3>
                         <p>Intense flavour, delightful aroma, high acidity, and rich body.</p>
                     </li>
                 </ul>
@@ -84,24 +88,28 @@
         <div id="cold-menu">
             <div class="cold-menu-heading">
                 <h2>Organic Cold pressed Juice</h2>
-                <br />
+                <br>
                 <ul>
                     <li>
+                    <h3>
                         Daily-Detox
+                    </h3>
                         <p>
                             A detoxifying blend of Apple, Ginger & Lemon
                         </p>
                     </li>
-                    <br />
                     <li>
+                    <h3>
                         Anti-Inflammantory
+                    </h3>
                         <p>
                             A Superfood blend of Beetroot & Orange
                         </p>
                     </li>
-                    <br />
                     <li>
-                        Clean-cleanse
+                        <h3>
+                            Clean-cleanse
+                        </h3>
                         <p>
                             A cleansing blend of Carrot & Cococunt
                         </p>
@@ -114,25 +122,29 @@
                 <h2 class="cacti-heading">
                     Cacti Plants
                 </h2>
-                <br />
+                <br>
                 <ul>
                     <li>
-                        San Pedro
+                        <h3>
+                            San Pedro
+                        </h3>
                         <p>
                             Fast-growing columnar cactus native to
                             the Andes Mountains.
                         </p>
                     </li>
-                    <br />
                     <li>
-                        Golden Barrell
+                        <h3>
+                            Golden Barrel
+                        </h3>
                         <p>
                             Barrel cactus which is endemic to east-central Mexico.
                         </p>
                     </li>
-                    <br />
                     <li>
-                        Peyote
+                        <h3>
+                            Peyote
+                        </h3>
                         <p>
                             Small, spineless cactus primarily found in Mexico.
                         </p>
@@ -143,8 +155,8 @@
     </section>
     <section>
         <div id="opening-times">
-            <img src="assets/images/juice image.jpg" alt="Picture of Juice bottles" class="juice-image">
-            <img src="assets/images/Coffee image.jpg" alt="Picture of Coffee fields" class="coffee-image">
+            <img src="assets/images/juiceimage.jpg" alt="Picture of Juice bottles" class="juice-image">
+            <img src="assets/images/coffeeimage.jpg" alt="Picture of Coffee fields" class="coffee-image">
             <h2>
                 Opening Times
             </h2>
@@ -190,7 +202,7 @@
             </h3>
             <form action="https://formdump.8000-leeaustinbro-cactuscafe-m56nnphkwri.ws-eu78.gitpod.io/" method="post"
                 class="signup">
-                <label for="email">Email address</label>
+                <label for="text">Email address</label>
                 <input type="email">
                 <input type="submit">
             </form>
