--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
 
-         <div id="homepage-outer", class="homepage-image"></div>
+         <div id="homepage-outer" class="homepage-image"></div>
 
     <br>
 
