--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </h3>
             <form action="https://formdump.8000-leeaustinbro-cactuscafe-m56nnphkwri.ws-eu78.gitpod.io/" method="post"
                 class="signup">
-                <label for="email" id="email">Email</label>
+                <label for="Email">Email</label>
                 <input type="email">
                 <input type="submit">
             </form>
