--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
                 and discounts then please sign up below by entering your email address.
             </h3>
             <form action="https://formdump.8000-leeaustinbro-cactuscafe-m56nnphkwri.ws-eu78.gitpod.io/" method="post"
-                class="signup">
-                <label for="Submit">Email</label>
-                <input type="email">
+                class="signup" target="blank">
+                <label for="email">Email</label>
+                <input type="email" id="email">
                 <input type="submit">
             </form>
         </div>
